--- a/public/styles.css
+++ b/public/styles.css
@@ -621,6 +621,13 @@ body {
     font-size: 2rem;
 }
 
+.tour-pin-value {
+    font-size: 1.5rem;
+    margin: 5px;
+    border: #333 2px solid;
+    border-width: 70%;
+}
+
 .tour-modal-content p {
     color: #666;
     margin-bottom: 15px;
