--- a/public/styles.css
+++ b/public/styles.css
@@ -493,6 +493,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 70px;
 }
 
 .header-left {
